fixed divider spacing in banner text

--- a/SkyrimTogetherCSS.css
+++ b/SkyrimTogetherCSS.css
@@ -64,8 +64,7 @@
     border: 1px solid;
     border-image: linear-gradient(to right, #ffffff00, #ffffff, #ffffff00);
     border-image-slice: 1;
-    margin-top: 20px;
-    margin-bottom: 10px;
+    margin: 20px 0px 10px 0px;
 }
 
 .bannerTogether {
@@ -100,6 +99,10 @@
 
 .bannerTextDesktop {
     padding-top: 180px;
+}
+
+.bannerDividerDesktop {
+    margin: 40px 0px 20px 0px;
 }
 
 .bannerTextDesktopScale {
